--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,7 @@
 name: CI
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: ["main"]
 
@@ -90,6 +91,7 @@ jobs:
         run: |
           pushd .envs
           envsubst < .env.tpl > .env
+          cat .env
           popd
 
       - uses: conda-incubator/setup-miniconda@v3
@@ -100,6 +102,7 @@ jobs:
           activate-environment: mhai-web
           auto-update-conda: true
           conda-solver: libmamba
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
@@ -110,9 +113,17 @@ jobs:
       - name: Containers configuration
         run: sugar compose config
 
-      - name: Build the Stack
+      - name: Login to GitHub Container Registry
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Build Docker Image
         run: sugar compose build
 
-      - name: Publish containers
-        if: ${{ github.event_name == 'pull_request' }}
-        run: sugar compose config
+      - name: Push Docker image
+        if: ${{ github.event_name == 'workflow_dispatch' }}
+        run: sugar compose push
